# faro

./: LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CONVENTIONS.md  MANIFEST.md
docs/plans/: 2026-05-06-faro-initial-plan.md
src/faro/: __init__.py  cli.py  discovery.py  hook.py  manifest.py  patterns.py  python_ast.py  reporter.py  scanner.py  staged.py
tests/: test_cli_fail_closed.py  test_discovery.py  test_hashing.py  test_identity.py  test_manifest.py  test_python_ast.py  test_staging.py  test_symlink_archive.py  test_v05.py  test_v07.py
