[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "faro"
version = "0.1.0"
description = "Hermes Skill/Plugin security pipeline — staging, audit, approve"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
faro = "faro.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
